# education

cpp_labs/Seminar2/: IsPrime.cpp  Seminar2.cpp  Seminar2.sln  (+18 more)
cpp_labs/seminar_3/: CMakeLists.txt  find_by_name.cpp  find_by_name.h  phone_directory_unit.h  recipe.h  seminar_3.cpp  seminar_3.sln  seminar_3.vcxproj  seminar_3.vcxproj.filters
cpp_labs/seminar_3/x64/Debug/: seminar_3.exe.recipe  seminar_3.ilk  seminar_3.vcxproj.FileListAbsolute.txt  vc143.idb
cpp_labs/seminar_3/x64/Debug/seminar_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  seminar_3.lastbuildstate
cpp_labs/seminar_7/: CMakeLists.txt  Car.cpp  Car.h  Contact.cpp  Contact.h  Fraction.cpp  Fraction.h  PhoneBook.cpp  PhoneBook.h  Student.cpp  Student.h  seminar_7.cpp  seminar_7.sln  seminar_7.vcxproj  seminar_7.vcxproj.filters
cpp_labs/seminar_7/Bank/: Bank.cpp  Bank.h  BankAccount.cpp  BankAccount.h
cpp_labs/seminar_7/Figures/: Circle.cpp  Circle.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
cpp_labs/seminar_7/Games/: Game.cpp  Game.h  RPG.cpp  RPG.h  Shooter.cpp  Shooter.h
cpp_labs/seminar_7/Players/: Archer.cpp  Archer.h  Mage.cpp  Mage.h  Player.cpp  Player.h  Warrior.cpp  Warrior.h
cpp_labs/seminar_7/x64/Debug/: seminar_7.exe.recipe  seminar_7.ilk  seminar_7.vcxproj.FileListAbsolute.txt  vc143.idb
cpp_labs/seminar_7/x64/Debug/seminar_7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  seminar_7.lastbuildstate
(+72 files in other folders)
